HTML semantics and content added. Starter CSS.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css"/>
+    <title>Megan Schneider</title>
 </head>
 <body>
+<!-- This is the Header topleft -->
+    <header>
+        <h1>Megan Schneider</h1>
+<!-- This is the nav bar topright -->
+        <nav>
+            <ul>
+                <li>About Me</li>
+                <li>Work</li>
+                <li>Contact Me</li>
+                <li>Resume</li>
+            </ul>
+        </nav>
+<!-- This is the header image and profile image -->
+    <div></div>
+    <h2>Cool Subtitle</h2>
+    <div></div>
+    </header>
+<!-- This is the main body with links from nav bar -->
+    <main>
+        <section>
+            <!-- ABOUT ME SECTION -->
+            <h3>About Me</h3>
+            <p>This is the paragraph about me.</p>
+            <!-- WORK SECTION -->
+            <h3>Work</h3>
+                <p>Project link</p>
+                <p>Project link</p>
+                <p>Project link</p>
+                <p>Project link</p>
+                <p>Project link</p>
+            <!-- CONTACT ME SECTION -->
+            <h3>Contact Me</h3>
+                <ul>
+                    <li>Email: schneidsmc@gmail.com</li>
+                    <li>Phone #: 867-5309</li>
+                    <li>Git Hub Profile</li>
+                </ul>
+            <!-- RESUME LINK -->
+            <h3>Resume</h3>
+                <p>Link to resume</p>
+        </section>
+    </main>
+<!-- FOOTER -->
+    <Footer>
+        <h3>Made by me</h3>
+    </Footer>
     
 </body>
 </html>
