--- a/index.html
+++ b/index.html
@@ -39,16 +39,24 @@
         <section id="Work">
             <h3 class="column left">Work</h3>
                 <card class="card">
-                    <img src= "assets/Zoe.jpeg"alt="Zoe"/>
+                    <img src= "assets/Zoe.jpeg"alt="Collie"/>
                     <p>This is project Zoe!</p>
                 </card>
                 <card class="card">
-                    <img src= "assets/Oxford.jpeg"alt="Oxford"/>
+                    <img src= "assets/Oxford.jpeg"alt="Weimer"/>
                     <p>This is project Oxford!</p>
                 </card>
                 <card class="card">
-                    <img src= "assets/Louie.jpeg"alt="Louie"/>
+                    <img src= "assets/Louie.jpeg"alt="Hound"/>
                     <p>This is project Louie!</p>
+                </card>
+                <card class="card">
+                    <img src= "assets/Zia.jpeg"alt="Boston"/>
+                    <p>This is project Zia!</p>
+                </card>
+                <card class="card">
+                    <img src= "assets/Aoife.jpeg"alt="Lab"/>
+                    <p>This is project Aoife!</p>
                 </card>
         </section>
             <!-- CONTACT ME SECTION -->
