CSS grid work, header photo, h1 bug debugged

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <!-- This is the Header topleft -->
-    <header class="main-header">
+    <header>
         <h1>Megan Schneider</h1>
 <!-- This is the nav bar topright -->
         <nav>
@@ -25,43 +25,41 @@
         <div>
             <img src= "assets/header-mountains.jpeg"alt="mountains"/>
         </div>
-    
-        <div></div>
 <!-- This is the main body with links from nav bar -->
     <main>
             <!-- ABOUT ME SECTION -->
         <section id="#About-me">
             <h3 class="column left">About Me</h3>
-                <p>This is the paragraph about me.</p>
+                <p class="right">This is the paragraph about me.</p>
         </section>
 
              <!-- WORK SECTION -->
-        <section id="Work">
-            <h3 class="column left">Work</h3>
-                <card class="card">
+        <section class="grid-container" id="Work">
+            <h3 class="grid-item" id="grid-area-work">Work</h3>
+                <card class="grid-item grid-card-properties" id="grid-area-Zoe">
                     <img src= "assets/Zoe.jpeg"alt="Collie"/>
                     <p>This is project Zoe!</p>
                 </card>
-                <card class="card">
+                <card class="grid-item grid-card-properties" id="grid-area-oxford">
                     <img src= "assets/Oxford.jpeg"alt="Weimer"/>
                     <p>This is project Oxford!</p>
                 </card>
-                <card class="card">
+                <card class="grid-item grid-card-properties" id="grid-area-louie">
                     <img src= "assets/Louie.jpeg"alt="Hound"/>
                     <p>This is project Louie!</p>
                 </card>
-                <card class="card">
+                <card class="grid-item grid-card-properties" id="grid-area-zia">
                     <img src= "assets/Zia.jpeg"alt="Boston"/>
                     <p>This is project Zia!</p>
                 </card>
-                <card class="card">
+                <card class="grid-item grid-card-properties" id="grid-area-aoife">
                     <img src= "assets/Aoife.jpeg"alt="Lab"/>
                     <p>This is project Aoife!</p>
                 </card>
         </section>
             <!-- CONTACT ME SECTION -->
         <section id="contact-me">
-            <h3 class="column left">Contact Me</h3>
+            <h3>Contact Me</h3>
                 <ul class="contact-me">
                     <li>Email: schneidsmc@gmail.com</li>
                     <li>Phone #: 867-5309</li>
