CSS Grid template work. LAst row is still showing extra height.

--- a/index.html
+++ b/index.html
@@ -36,25 +36,40 @@
              <!-- WORK SECTION -->
         <section class="grid-container" id="Work">
             <h3 class="grid-item" id="grid-area-work">Work</h3>
-                <card class="grid-item grid-card-properties" id="grid-area-Zoe">
-                    <img src= "assets/Zoe.jpeg"alt="Collie"/>
-                    <p>This is project Zoe!</p>
+                <card class="grid-item grid-card-properties" id="grid-area-sky">
+                    <img src= "assets/shed.jpeg"alt="Sky/shed"/>
+                    <div class="top-work-box">
+                        <h4>Sky</h4>
+                        <p>This is project Sky!</p>
+                    </div>
                 </card>
-                <card class="grid-item grid-card-properties" id="grid-area-oxford">
-                    <img src= "assets/Oxford.jpeg"alt="Weimer"/>
-                    <p>This is project Oxford!</p>
+                <card class="grid-item grid-card-properties" id="grid-area-spring">
+                    <img src= "assets/spring.jpeg"alt="sunset"/>
+                    <div class="work-box">
+                        <h4>Spring</h4>
+                        <p>This is project Spring!</p>
+                    </div>
                 </card>
-                <card class="grid-item grid-card-properties" id="grid-area-louie">
-                    <img src= "assets/Louie.jpeg"alt="Hound"/>
-                    <p>This is project Louie!</p>
+                <card class="grid-item grid-card-properties" id="grid-area-summer">
+                    <img src= "assets/summer.jpeg"alt="Beach"/>
+                    <div class="work-box">
+                        <h4>Summer</h4>
+                        <p>This is project Summer!</p>
+                    </div>
                 </card>
-                <card class="grid-item grid-card-properties" id="grid-area-zia">
-                    <img src= "assets/Zia.jpeg"alt="Boston"/>
-                    <p>This is project Zia!</p>
+                <card class="grid-item grid-card-properties" id="grid-area-winter">
+                    <img src= "assets/Winter.jpeg"alt="winter trees"/>
+                    <div class="work-box">
+                        <h4>Winter</h4>
+                        <p>This is project Winter!</p>
+                    </div>
                 </card>
-                <card class="grid-item grid-card-properties" id="grid-area-aoife">
-                    <img src= "assets/Aoife.jpeg"alt="Lab"/>
-                    <p>This is project Aoife!</p>
+                <card class="grid-item grid-card-properties" id="grid-area-autumn">
+                    <img src= "assets/fall.jpeg"alt="leaves"/>
+                    <div class="work-box">
+                        <h4>Autumn</h4>
+                        <p>This is project Autumn!</p>
+                    </div>
                 </card>
         </section>
             <!-- CONTACT ME SECTION -->
