Fixed nav bar links and contact me CSS

--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
 <!-- This is the nav bar topright -->
         <nav>
             <ul>
-                <li><a href="#About-me"></a>About Me</a></li>
-                <li><a href="Work"></a>Work</a></li>
-                <li> <a href="#contact-me"></a>Contact Me</a></li>
-                <li><a href="#resume"></a>Resume</a></li>
+                <li><a href="#About-me">About Me</a></li>
+                <li><a href="#Works">Work</a></li>
+                <li> <a href="#contact-me">Contact Me</a></li>
+                <li><a href="#resume">Resume</a></li>
             </ul>
         </nav>
     </header>
 <!-- This is the header image and profile image -->
         <div>
             <img src= "assets/header-mountains.jpeg"alt="mountains"/>
+            <p  class="Tundra">Welcome to the Tundra</p>
         </div>
 <!-- This is the main body with links from nav bar -->
     <main>
             <!-- ABOUT ME SECTION -->
-        <section id="#About-me">
+        <section id="About-me">
             <h3 class="column left">About Me</h3>
                 <p class="right">This is the paragraph about me.</p>
         </section>
 
              <!-- WORK SECTION -->
-        <section class="grid-container" id="Work">
+        <section class="grid-container" id="Works">
             <h3 class="grid-item" id="grid-area-work">Work</h3>
                 <card class="grid-item grid-card-properties" id="grid-area-sky">
                     <img src= "assets/shed.jpeg"alt="Sky/shed"/>
@@ -74,8 +75,8 @@
         </section>
             <!-- CONTACT ME SECTION -->
         <section id="contact-me">
-            <h3>Contact Me</h3>
-                <ul class="contact-me">
+            <h3 class="column left">Contact Me</h3>
+                <ul class="right contact-me">
                     <li>Email: schneidsmc@gmail.com</li>
                     <li>Phone #: 867-5309</li>
                     <li>Git Hub Profile</li>
@@ -85,7 +86,7 @@
     </main>
 <!-- FOOTER -->
     <Footer>
-        <h6>Made by me</h6>
+        <h5>Made by me</h5>
     </Footer>
     
 </body>
