Colors and texture

--- a/index.html
+++ b/index.html
@@ -79,15 +79,12 @@
                 <ul class="right contact-me">
                     <li>Email: schneidsmc@gmail.com</li>
                     <li>Phone #: 867-5309</li>
-                    <li>Git Hub Profile</li>
+                    <li><a href="https://github.com/schneidsmc">Git Hub Profile</a></li>
                 </ul>
         </section>
     
     </main>
-<!-- FOOTER -->
-    <Footer>
-        <h5>Made by me</h5>
-    </Footer>
+
     
 </body>
 </html>
