--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
 <!-- This is the header image and profile image -->
         <div>
             <img src= "assets/header-mountains.jpeg"alt="mountains"/>
-            <p  class="Tundra">Welcome to the Tundra</p>
+            <p  class="Tundra">Keep your stick on the Ice</p>
+        </div>
+        <div class="profile-image">
+            <img src="assets/Me.jpeg" alt="Profile photo">
         </div>
 <!-- This is the main body with links from nav bar -->
     <main>
             <!-- ABOUT ME SECTION -->
         <section id="About-me">
             <h3 class="column left">About Me</h3>
-                <p class="right">This is the paragraph about me.</p>
+                <p class="column right about-me-p">Hey! Hi! I’m hopefully not the problem, but it’s me! Welcome to my portfolio. I am an outdoorsy gal starting a new adventure! I have a unique blend of passion and determination. Some may say stubborn but I say purpose-driven mindset. I am always up for an adventure, a challenge and some fun during the process! I love to learn new things and continue to enhance myself and those around me. In both professional and personal life, I strive to lead with honesty and genuine kindness.</p>
         </section>
 
              <!-- WORK SECTION -->
