Fixed the CSS gridgit add -Agit add -A

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="grid-container" id="Works">
             <h3 class="grid-item" id="grid-area-work">Work</h3>
                 <card class="grid-item grid-card-properties" id="grid-area-sky">
-                    <img src= "assets/shed.jpeg"alt="Sky/shed"/>
+                    <img src= "assets/sky.jpeg"alt="Sky"/>
                     <div class="top-work-box">
                         <h4>Sky</h4>
                         <p>This is project Sky!</p>
