--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
             <!-- ABOUT ME SECTION -->
         <section id="About-me">
             <h3 class="column left">About Me</h3>
-                <p class="column right about-me-p">Hey! Hi! I’m hopefully not the problem, but it’s me! Welcome to my portfolio. I am an outdoorsy gal starting a new adventure! I have a unique blend of passion and determination. Some may say stubborn but I say purpose-driven mindset. I am always up for an adventure, a challenge and some fun during the process! I love to learn new things and continue to enhance myself and those around me. In both professional and personal life, I strive to lead with honesty and genuine kindness.</p>
+                <p class="column right about-me-p">Hey! Hi! I’m hopefully not the problem, but it’s me! Welcome to my portfolio. 
+                    I am an outdoorsy gal starting a new adventure! I have a unique blend of passion and determination. Some may 
+                    say stubborn but I say purpose-driven mindset. I am always up for an adventure, a challenge and some fun during 
+                    the process! I love to learn new things and continue to enhance myself and those around me. In both professional 
+                    and personal life, I strive to lead with honesty and genuine kindness.</p>
         </section>
 
              <!-- WORK SECTION -->
         <section class="grid-container" id="Works">
             <h3 class="grid-item" id="grid-area-work">Work</h3>
                 <card class="grid-item grid-card-properties" id="grid-area-sky">
-                    <img src= "assets/sky.jpeg"alt="Sky"/>
+                    <img src= "assets/shed.jpeg"alt="Sky"/>
                     <div class="top-work-box">
                         <h4>Sky</h4>
                         <p>This is project Sky!</p>
