README details, HTML edits and CSS notes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3 class="column left">About Me</h3>
                 <p class="column right about-me-p">Hey! Hi! I’m hopefully not the problem, but it’s me! Welcome to my portfolio. 
                     I am an outdoorsy gal starting a new adventure! I have a unique blend of passion and determination. Some may 
-                    say stubborn but I say purpose-driven mindset. I am always up for an adventure, a challenge and some fun during 
+                    say stubborn but I say I have a purpose-driven mindset. I am always up for an adventure, a challenge and some fun during 
                     the process! I love to learn new things and continue to enhance myself and those around me. In both professional 
                     and personal life, I strive to lead with honesty and genuine kindness.</p>
         </section>
